[package]
name = "lockrs"
version = "0.1.0"
edition = "2021"

[lib]
name = "lock"
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3.7", features = ["consoleapi", "libloaderapi"] }
chiter = { git = "https://github.com/boatboatboatboat/chiter" }
winconsole = "0.11"
toy-arms = "0.9.4"
toy-arms_derive = "0.1.5"
rlua = "0.19.4"
clap = { version = "3.0.10", features = ["derive"] }
libc = "0.2.112"
winit = "0.27.2"
cxx = "1.0.73"
byte-strings = "0.2.2"


egui = "0.21.0"
console = "0.15.0"
retour = "0.1.0"
dialoguer = "0.9.0"
log = "0.4.16"
once_cell = "1.8.0"
parking_lot = "0.11.2"
simplelog = "0.11.0"
widestring = "1.0.1"
nalgebra = "0.32.2"
faithe = "0.8.0"

windows = { version = "0.44.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation",
    "Win32_System_Kernel",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
] }

image = { version = "0.24", features = ["jpeg"] }
autopilot = "0.4.0"
shroud = { version = "0.1.6", features = ["directx11"] }
winreg = "0.10"
crossterm = "0.26.1"
egui-toast = "0.3.0"
lazy_static = "1.4.0"
backtrace = "0.3.67"
xorstring = { git = "https://github.com/Proximyst/xorstring" }

[dependencies.egui_extras]
version = "0.21"
features = ["image"]

[dependencies.egui-d3d11]
git = "https://github.com/Alleexxi/egui-d3d11"
features = ["save-blob", "parking-lot"]

[build]
target = "nightly-i686-pc-windows-msvc"

# Custom Scripts
[package.metadata.commands]
dev = "rustup run nightly-i686-pc-windows-msvc cargo build"
release = "rustup run nightly-i686-pc-windows-msvc cargo build --release"
udeps = "rustup run nightly-i686-pc-windows-msvc cargo udeps"